Fix overlap of inaccessible modal, improve modal styles, remove one modal issue

--- a/docs/inaccessible-components/modal/Accessible/index.scss
+++ b/docs/inaccessible-components/modal/Accessible/index.scss
@@ -24,7 +24,6 @@
   &__content {
     position: relative;
     background: #fefefe;
-    width: 100%;
     max-width: 600px;
     padding: 2rem;
 
@@ -41,7 +40,7 @@
     position: absolute;
     right: 1rem;
     top: 1rem;
-    font-size: 2rem;
+    font-size: 1.2rem;
     background: none;
     border: none;
     padding: 0.25rem;
