--- a/docs/inaccessible-components/modal/index.scss
+++ b/docs/inaccessible-components/modal/index.scss
@@ -3,7 +3,7 @@
 .modal {
   &__wrapper {
     position: fixed;
-    left: -100vw;
+    left: 100vw;
     right: 0;
     top: 0;
     width: 100vw;
